--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,68 @@
-version: '3.8'
-
 services:
-  # Registry redirect proxy
-  proxy:
-    build: .
-    container_name: registry-redirect-proxy
-    ports:
-      - "8080:8080"
-    environment:
-      # JWT Configuration
-      - JWT_SECRET=${JWT_SECRET}
-      
-      # S3 Configuration
-      - S3_BUCKET=${S3_BUCKET}
-      - S3_REGION=${S3_REGION:-us-east-1}
-      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
-      - S3_SECRET_KEY=${S3_SECRET_KEY}
-      
-      # Optional: For MinIO or custom S3 endpoints
-      # - S3_ENDPOINT=http://minio:9000
-      - S3_ENDPOINT=${S3_ENDPOINT:-}
-    depends_on:
-      - registry
-    networks:
-      - registry-net
+  zot:
+    image: ghcr.io/project-zot/zot-linux-amd64:v2.1.11
+    container_name: zot
     restart: unless-stopped
+    ports:
+      - "5001:5001"
+    volumes:
+      - ./zot/config.json:/etc/zot/config.json:ro
+      - ./keys/public.pem:/etc/zot/public.pem:ro
+    depends_on:
+      - minio
 
-  # Zot registry (example)
-  registry:
-    image: ghcr.io/project-zot/zot-linux-amd64:latest
-    container_name: zot-registry
+  proxy:
+    build: ./proxy
+    container_name: registry-redirect
+    restart: unless-stopped
     ports:
       - "5000:5000"
     volumes:
-      - ./zot-config.json:/etc/zot/config.json:ro
-      - registry-data:/var/lib/registry
-    networks:
-      - registry-net
+      - ./keys:/keys:ro
+    depends_on:
+      - zot
+
+  minio:
+    image: minio/minio
+    container_name: minio-server
     restart: unless-stopped
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - minio-data:/data
+    command: server /data --console-address :9001
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
 
-  # Optional: MinIO for local S3 testing
-  # minio:
-  #   image: minio/minio:latest
-  #   container_name: minio
-  #   ports:
-  #     - "9000:9000"
-  #     - "9001:9001"
-  #   environment:
-  #     - MINIO_ROOT_USER=minioadmin
-  #     - MINIO_ROOT_PASSWORD=minioadmin
-  #   command: server /data --console-address ":9001"
-  #   volumes:
-  #     - minio-data:/data
-  #   networks:
-  #     - registry-net
-  #   restart: unless-stopped
+  minio-init:
+    image: minio/mc
+    container_name: minio-init
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      sleep 10;
+      mc alias set myminio http://minio:9000 minioadmin minioadmin;
+      mc mb myminio/distribution;
+      mc mb myminio/zot;
+      exit 0;
+      "
 
-networks:
-  registry-net:
-    driver: bridge
+  api:
+    build: ./api
+    ports:
+      - "8001:8001"
+    volumes:
+      - ./keys/private.pem:/app/keys/private.pem:ro
+    environment:
+      - PORT=8001
 
 volumes:
-  registry-data:
-  # minio-data:
+  minio-data:
